--- a/.github/workflows/goimports.yml
+++ b/.github/workflows/goimports.yml
@@ -1,16 +1,21 @@
-name: Validate code format with goimports
+name: Check code formatting
 on: [push, pull_request]
 jobs:
-  validate:
+  check-format:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-go@v1
+    - name: Setup Go 1.11
+      uses: actions/setup-go@v1
+      with:
+        go-version: '1.11'
 
     - name: Install goimports
       run: go get golang.org/x/tools/cmd/goimports
 
-    - name: Check diff
+    - name: Checkout the repository
+      uses: actions/checkout@v2
+
+    - name: Check formatting with goimports
       run: |
         if $(go env GOPATH)/bin/goimports -d . | grep . ; then
           exit 1
