--- a/cmd/webpkgserver/webpkgserver.example.toml
+++ b/cmd/webpkgserver/webpkgserver.example.toml
@@ -213,6 +213,13 @@
 # experience with people using it out in the wild, we will gradually move it to
 # the PRODUCTION stage.
 #
+# In the event that cert renewal fails and requires user intervention on the
+# user's CA account packager will continue to request new certificates in the
+# background which will result in multiple orders possibliy queueing up in the
+# user's CA account. Make sure to clear all those orders as you it may result in
+# multiple certificate charges. It's also important that you make sure you are
+# notified (by email) when such events occur so that you can resolve appropriately.
+#
 # Configure ACME, which allows the webpkgserver to automatically renew Signed
 # Exchange certificates.
 #
